cumulative layout shift lighthouse issue

--- a/works.css
+++ b/works.css
@@ -64,6 +64,7 @@
 }
 
 .works-image {
+  aspect-ratio: attr(width) / attr(height);
   width: 100%;
   height: auto;
 }
